src/test/deca/context/invalid/obtained_res/instanceOfNoneClasscont.res
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:40) - verify program: start
DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:43) - verify listClass: start
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:45) - verify program: Pass 1 end
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:50) - verify program: Pass 2 end
DEBUG fr.ensimag.deca.tree.Main.verifyMain(Main.java:36) - verify Main: start
./src/test/deca/context/invalid/created/testInstanceOf/instanceOfNoneClass.deca:10:23: InstanceOfIncompatibilityException: The instanceof operation cannot be performed because the types are not compatible (Not of type class or null).
